--- a/Html/index.html
+++ b/Html/index.html
@@ -14,39 +14,42 @@
 
     <table>
         <tr>
-            <td><button id="clear">C</button></td>         
+            <td><input type="button" id="limparTela" class = "button" value="C" /></td>      
 
-            <td><p id="num">0</p></td>
+            <td >
+                <input type="text" id="tela"  readonly="readonly" />
+            </td>
     </tr>
     </table>
     <table id="tabela2">
         
-        <tr>
-            <td><button>7</button></td>
-            <td><button>8</button></td>
-            <td><button>9</button></td>
-            <td><button class="operadores">+</button></td>
+        <tr class = button>
+            <td><input type="button" id="num7" class = "button" value="7" /></td>
+            <td><input type="button" id="num8" class = "button" value="8" /></td>
+            <td><input type="button" id="num9" class = "button" value="9" /></td>
+            <td><input type="button" id="soma" class = "button" value="+" /></td>
         </tr>
-        <tr>
-            <td><button>4</button></td>
-            <td><button>5</button></td>
-            <td><button>6</button></td>
-            <td><button class="operadores">-</button></td>
+        <tr class = button>
+            <td><input type="button" id="num4" class = "button" value="4" /></td>
+            <td><input type="button" id="num5" class = "button" value="5" /></td>
+            <td><input type="button" id="num6" class = "button" value="6" /></td>
+            <td><input type="button" id="subtracao" class = "button" value="-" /></td>
         </tr>
-        <tr>
-            <td><button>1</button></td>
-            <td><button>2</button></td>
-            <td><button>3</button></td>
-            <td><button class="operadores">*</button></td>
+        <tr class = button>
+            <td><input type="button" id="num1" class = "button" value="1" /></td>
+            <td><input type="button" id="num2" class = "button"value="2" /></td>
+            <td><input type="button" id="num3" class = "button" value="3" /></td>
+            <td><input type="button" id="multiplicacao" class = "button" value="*" /></td>
         </tr>
-        <tr>
-            <td><button>0</button></td>
-            <td><button >.</button></td>
-            <td><button class="operadores">=</button></td>
-            <td><button class="operadores">/</button></td>
+        <tr class = button>
+            <td><input type="button" id="num0" class = "button" value="0" /></td>
+            <td><input type="button" id="ponto" class = "button" value="." /></td>
+            <td><input type="button" id="resultado" class = "button" value="=" /></td>
+            <td><input type="button" id="divisao" class = "button" value="/" /></td>
         </tr>
     </table>
 </div>
-    
+<script type="text/javascript" src="../javascript/calculadora.js"></script>
+
 </body>
 </html>
